--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Deploy to ZEIT Now
-      run: 
+      run: |
         npm ci
-        npm run build --if-present
+        npm run build
         npm run test
         npm run deploy
       env:
