--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,16 +20,15 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2 & Deploy to ZEIT Now
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Deploy to ZEIT Now
-      run:
-        npm ci
-        npm run build --if-present
-        npm test
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+    - run: npm deploy
       env:
         CI: true
         ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
