--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,10 +25,12 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-    - run: npm deploy
+    - name: Deploy to ZEIT Now
+      run:
+        npm ci
+        npm run build --if-present
+        npm test
+        npm deploy
       env:
         CI: true
         ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
