--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,8 +29,7 @@ jobs:
       run:
         npm ci
         npm run build --if-present
-        npm test
-        # npm deploy
+        npm deploy
       env:
         CI: true
         ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
