--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
         npm ci
         npm run build --if-present
         npm deploy
+        ZEIT_TOKEN=${{ secrets.ZEIT_TOKEN }} npm run deploy --yes
       env:
         CI: true
         ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
