--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,8 @@ jobs:
       run:
         npm ci
         npm run build --if-present
-        npm deploy
+        npm run test
+        npm run deploy
       env:
         CI: true
         ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
