--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Deploy to ZEIT Now
       run:
         npm ci
-        npm run build --if-present
         npm run test
-        npm run deploy
+        npm run build && now --prod --token ${{ secrets.ZEIT_TOKEN }}
+
       env:
         CI: true
         ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
