--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,10 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Deploy to ZEIT Now
-      run:
+      run: |
         npm ci
-        npm run test
-        npm run build && now --prod --token ${{ secrets.ZEIT_TOKEN }}
+        npm run build --if-present
+        npm run deploy
 
       env:
         CI: true
