--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
-        npm run deploy
+        npm run deploy --yes
 
       env:
         CI: true
