--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Deploy to ZEIT Now
-      run:
+      run: |
         npm ci
         npm run build --if-present
         npm run test
